--- a/example.env
+++ b/example.env
@@ -93,9 +93,16 @@ WEBUI_PORT_QBITTORRENT=8200
 WEBUI_PORT_RADARR=7878
 WEBUI_PORT_SONARR=8989
 WEBUI_PORT_SUGGESTARR=5000
+WEBUI_PORT_WIZARR=5090
 
 # Optional
 MAIL_FROM= # ex : toto@mydomain.com
+MAIL_TO=
 MAIL_HOST= # ex : smtp.sendgrid.net
 MAIL_PORT= # ex : 465
 MAIL_USERNAME= # ex : apikey
+
+TUNNEL_ID= # ex : 123456
+
+WATCHTOWER_HTTP_API_TOKEN=changeme
+WATCHTOWER_HTTP_API_METRICS_ENABLED=false
